--- a/FluxorScopedServiceExample/FluxorScopedServiceExample/Pages/Counter.razor
+++ b/FluxorScopedServiceExample/FluxorScopedServiceExample/Pages/Counter.razor
@@ -1,10 +1,18 @@
 ﻿@page "/counter"
 
+@using Fluxor
+@using FluxorScopedServiceExample.Store.CounterUseCase
+
+@inherits Fluxor.Blazor.Web.Components.FluxorComponent
+
+@inject IState<CounterState> CounterState
+@inject IDispatcher Dispatcher
+
 <PageTitle>Counter</PageTitle>
 
 <h1>Counter</h1>
 
-<p role="status">Current count: @currentCount</p>
+<p role="status">Current count: @CounterState.Value.ClickCount</p>
 
 <button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
 
@@ -13,6 +21,7 @@
 
     private void IncrementCount()
     {
-        currentCount++;
+        var action = new IncrementCounterAction();
+        Dispatcher.Dispatch(action);
     }
 }
